--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-login-buttons": "^3.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
