--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "chart.js": "^3.2.1",
     "express": "^4.17.1",
     "firebase": "^8.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
