--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^8.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
