--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "chart.js": "^3.2.1",
+    "codemirror": "^5.61.1",
     "express": "^4.17.1",
     "firebase": "^8.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
+    "react-codemirror2": "^7.2.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
