--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-social-login-buttons": "^3.4.0",
+    "sw-precache": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
