--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "codemirror": "^5.61.1",
     "express": "^4.17.1",
     "firebase": "^8.5.0",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
