--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-codemirror2": "^7.2.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
